bootstrap/infisical/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: infisical
  namespace: infisical
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: mydnschallenge
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - il.doany.io
  rules:
    - host: il.doany.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                # infisical.fullnameOverride in helmchart.yaml
                name: infisical
                port:
                  number: 8080
